# ipy-llm-kernel

./: .gitignore  LICENSE  README.md  demo_ipy_llm_kernel.ipynb  setup.cfg
docs/: demo_ipy_llm_kernel.ipynb
src/ipy_llm_kernel/: __init__.py  __main__.py  _endpoints.py  _kernel.py
