[metadata]
name = ipy-llm-kernel
version = attr: ipy_llm_kernel.__version__
description = A Jupyter kernel for communicating with large language models
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/haesleinhuepf/ipy-llm-kernel
author = Robert Haase
author_email = robert.haase@uni-leipzig.de
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/haesleinhuepf/ipy-llm-kernel/issues
    Documentation = https://github.com/haesleinhuepf/ipy-llm-kernel#README.md
    Source Code = https://github.com/haesleinhuepf/ipy-llm-kernel
    User Support = https://github.com/haesleinhuepf/ipy-llm-kernel/issues

[options]
packages = find:
install_requires =
    numpy
    ipython
    jupyter_client
    metakernel
    openai>=1.30.1
    anthropic>=0.30.1
    google-generativeai
    stackview
    scikit-image

python_requires = >=3.9
include_package_data = True
package_dir =
    =src

# add your package requirements here

[options.packages.find]
where = src

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/

[options.package_data]
* = *.yaml
